--- a/index.html
+++ b/index.html
@@ -7,55 +7,93 @@
 
 <style>
 html,body{
-  margin:0;padding:0;width:100%;height:100%;
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
   overflow:hidden;
-  background:radial-gradient(circle at top,#2b0b4f,#05010a);
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
+  background:radial-gradient(circle at top,#2b0b4f,#05010a);
   touch-action:none;
 }
 body::before{
   content:"";
-  position:fixed;inset:0;
-  background:
+  position:fixed;
+  inset:0;
+  background-image:
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
   opacity:.18;
   pointer-events:none;
 }
+
+/* HUD */
 #hud{
-  position:fixed;top:14px;left:14px;
-  color:white;font-size:18px;z-index:20;
+  position:fixed;
+  top:14px;
+  left:14px;
+  color:white;
+  font-size:18px;
+  z-index:20;
 }
+#lives{margin-left:6px}
+
+/* Panel */
 #panel{
-  position:fixed;bottom:80px;left:50%;
+  position:fixed;
+  bottom:80px;
+  left:50%;
   transform:translateX(-50%);
-  width:60px;height:14px;border-radius:20px;
+  width:60px;
+  height:14px;
+  border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
   box-shadow:0 0 30px rgba(255,80,180,.9);
+  z-index:15;
 }
+
+/* Harf kutuları */
 #letterBoxes{
-  position:fixed;bottom:20px;left:10px;
-  display:flex;gap:6px;z-index:16;
+  position:fixed;
+  bottom:20px;
+  left:10px;
+  display:flex;
+  gap:6px;
+  z-index:16;
 }
 .box{
-  width:28px;height:28px;border-radius:6px;
+  width:28px;
+  height:28px;
+  border-radius:6px;
   background:rgba(255,255,255,.12);
   backdrop-filter:blur(6px);
   border:1px solid rgba(255,255,255,.5);
   box-shadow:inset 0 0 8px rgba(255,255,255,.4);
-  color:white;display:flex;
-  align-items:center;justify-content:center;
-  font-weight:bold;font-size:14px;
+  color:white;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:bold;
+  font-size:14px;
 }
-.box.filled{background:rgba(255,255,255,.22);}
+.box.filled{
+  background:rgba(255,255,255,.22);
+}
+
+/* Düşen objeler */
 .item{position:absolute;top:-80px;pointer-events:none;}
+
 .star{
   width:18px;height:18px;
   background:radial-gradient(circle,#ffe58a,#ffb300);
-  clip-path:polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%);
+  clip-path:polygon(
+    50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,
+    50% 70%,21% 91%,32% 57%,2% 35%,39% 35%
+  );
   box-shadow:0 0 12px gold;
 }
+
 .heart{
   width:22px;height:22px;
   background:#ff4d6d;
@@ -63,46 +101,65 @@ body::before{
   border-radius:50% 50% 0 0;
 }
 .heart::before,.heart::after{
-  content:"";position:absolute;
+  content:"";
+  position:absolute;
   width:22px;height:22px;
-  background:#ff4d6d;border-radius:50%;
+  background:#ff4d6d;
+  border-radius:50%;
 }
 .heart::before{top:-11px}
 .heart::after{left:11px}
+
 .meteor{
-  width:16px;height:16px;border-radius:50%;
-  background:radial-gradient(circle,#bdbdbd,#424242);
-  box-shadow:0 0 28px rgba(255,255,255,.5);
+  width:16px;height:16px;
+  border-radius:50%;
+  background:radial-gradient(circle,#9e9e9e,#424242);
+  box-shadow:0 0 26px rgba(200,200,200,.6);
 }
 .meteor::after{
-  content:"";position:absolute;
-  top:-50px;left:50%;
+  content:"";
+  position:absolute;
+  top:-50px;
+  left:50%;
   transform:translateX(-50%);
   width:6px;height:50px;
-  background:linear-gradient(to top,rgba(255,255,255,.7),transparent);
+  background:linear-gradient(to top,rgba(255,160,0,.8),transparent);
 }
+
 .letter{
-  color:#ffd966;
-  font-size:22px;font-weight:bold;
+  font-size:20px;
+  font-weight:bold;
+  color:#ffd54f;
   text-shadow:0 0 14px gold;
 }
+
+/* Game over */
 #over{
-  display:none;position:fixed;inset:0;
+  display:none;
+  position:fixed;
+  inset:0;
   background:rgba(0,0,0,.75);
-  color:white;font-size:32px;
-  z-index:30;align-items:center;
-  justify-content:center;flex-direction:column;
+  color:white;
+  font-size:32px;
+  z-index:30;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
 }
 #over button{
-  margin-top:15px;padding:10px 22px;
-  border:none;border-radius:14px;
-  background:#ff4d6d;color:white;
+  margin-top:15px;
+  padding:10px 22px;
+  border:none;
+  border-radius:14px;
+  background:#ff4d6d;
+  color:white;
   font-size:18px;
 }
 </style>
 </head>
 
 <body>
+
 <div id="hud">
   Skor: <span id="score">0</span>
   <span id="lives">❤️❤️❤️</span>
@@ -112,71 +169,94 @@ body::before{
 <div id="panel"></div>
 
 <div id="over">
-  <div id="overText"></div>
+  Oyun Bitti
   <button onclick="location.reload()">Tekrar Oyna</button>
 </div>
 
 <script>
-let score=0,lives=3,running=true;
-const letters=["Y","I","I","L","D","Z"]; // 🔧 I iki kere
-const filled=new Set(),active=new Set(),items=[];
+let score=0;
+let lives=3;
+let running=true;
 let speedFactor=1;
+
+const letters=["Y","I","L","D","I","Z"];
+const filled=[];
+const active=[];
+const items=[];
 
 const panel=document.getElementById("panel");
 const scoreEl=document.getElementById("score");
 const livesEl=document.getElementById("lives");
 const over=document.getElementById("over");
-const overText=document.getElementById("overText");
 const boxes=document.getElementById("letterBoxes");
 
-["Y","I","L","D","I","Z"].forEach(l=>{
+/* kutular */
+letters.forEach(l=>{
   const b=document.createElement("div");
-  b.className="box";b.dataset.letter=l;
+  b.className="box";
+  b.dataset.letter=l;
   boxes.appendChild(b);
 });
 
+/* panel sürükleme */
 let dragging=false;
 panel.addEventListener("touchstart",()=>dragging=true);
 window.addEventListener("touchend",()=>dragging=false);
 window.addEventListener("touchmove",e=>{
   if(!dragging) return;
   let x=e.touches[0].clientX-panel.offsetWidth/2;
-  panel.style.left=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x))+"px";
+  x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
+  panel.style.left=x+"px";
 });
 
 function updateLives(){livesEl.textContent="❤️".repeat(lives);}
-function collide(a,b){return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);}
+function collide(a,b){
+  return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
+}
 
+/* spawn */
 function spawn(type){
   if(type==="letter"){
-    const pool=letters.filter(l=>!filled.has(l)&&!active.has(l));
+    const pool=letters.filter(l=>{
+      const countFilled=filled.filter(x=>x===l).length;
+      const countTotal=letters.filter(x=>x===l).length;
+      return countFilled < countTotal && !active.includes(l);
+    });
     if(!pool.length) return;
+
     const l=pool[Math.floor(Math.random()*pool.length)];
-    active.add(l);
+    active.push(l);
+
     const el=document.createElement("div");
-    el.className="item letter";el.textContent=l;
-    el.letter=l;el.y=-40;
+    el.className="item letter";
+    el.textContent=l;
+    el.letter=l;
+    el.y=-40;
     el.x=Math.random()*(innerWidth-40);
     el.style.left=el.x+"px";
     document.body.appendChild(el);
-    items.push({el,type,speed:2*speedFactor});
+    items.push({el,type});
     return;
   }
+
   const el=document.createElement("div");
   el.className="item "+type;
-  el.y=-60;el.x=Math.random()*(innerWidth-40);
-  el.style.left=el.x+"px";
+  el.y=-60;
+  el.x=Math.random()*(innerWidth-40);
   el.speed=(type==="meteor"?3:2)*speedFactor;
+  el.style.left=el.x+"px";
   document.body.appendChild(el);
-  items.push({el,type,speed:el.speed});
+  items.push({el,type});
 }
 
+/* loop */
 function loop(){
   if(!running) return;
   const pRect=panel.getBoundingClientRect();
+
   for(let i=items.length-1;i>=0;i--){
     const o=items[i];
-    o.el.y+=o.speed;
+    o.el.y+=(o.el.speed||2);
     o.el.style.top=o.el.y+"px";
     const r=o.el.getBoundingClientRect();
 
@@ -185,39 +265,48 @@ function loop(){
       if(o.type==="heart" && lives<3) lives++;
       if(o.type==="meteor") lives--;
       if(o.type==="letter"){
-        filled.add(o.el.letter);
-        active.delete(o.el.letter);
-        const box=[...document.querySelectorAll(".box")].find(b=>!b.textContent && b.dataset.letter===o.el.letter);
+        filled.push(o.el.letter);
+        active.splice(active.indexOf(o.el.letter),1);
+        const box=[...document.querySelectorAll(`[data-letter="${o.el.letter}"]`)]
+          .find(b=>b.textContent==="");
         if(box){box.textContent=o.el.letter;box.classList.add("filled");}
-        if(filled.size===6){
-          running=false;
-          overText.textContent="Kazandın ✨";
-          over.style.display="flex";
-        }
       }
+
       scoreEl.textContent=score;
       updateLives();
-      o.el.remove();items.splice(i,1);
+      o.el.remove();
+      items.splice(i,1);
+
       if(lives<=0){
         running=false;
-        overText.textContent="Kaybettin 💔";
         over.style.display="flex";
       }
       continue;
     }
+
     if(o.el.y>innerHeight+60){
-      if(o.type==="letter") active.delete(o.el.letter);
-      o.el.remove();items.splice(i,1);
+      if(o.type==="letter"){
+        active.splice(active.indexOf(o.el.letter),1);
+      }
+      o.el.remove();
+      items.splice(i,1);
     }
   }
   requestAnimationFrame(loop);
 }
 
+/* zamanlayıcılar */
 setInterval(()=>spawn("star"),900);
-setInterval(()=>spawn("heart"),5200);
 setInterval(()=>spawn("meteor"),1200);
-setInterval(()=>spawn("letter"),1800);
-setInterval(()=>speedFactor+=0.1,10000); // 🔥 hızlanma
+setInterval(()=>spawn("heart"),5200);
+
+/* 🔧 HARFLER ARTIK DAHA SEYREK */
+setInterval(()=>spawn("letter"),3200);
+
+/* 🔥 OYUN ZAMANLA HIZLANIR */
+setInterval(()=>{
+  speedFactor+=0.05;
+},8000);
 
 loop();
 </script>
