--- a/index.html
+++ b/index.html
@@ -7,81 +7,65 @@
 
 <style>
 html,body{
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
-  overflow:hidden;
+  margin:0;padding:0;width:100%;height:100%;overflow:hidden;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   background:radial-gradient(circle at top,#2b0b4f,#05010a);
   touch-action:none;
 }
 body::before{
-  content:"";
-  position:fixed;
-  inset:0;
+  content:"";position:fixed;inset:0;
   background-image:
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
-  opacity:.18;
-  pointer-events:none;
+  opacity:.18;pointer-events:none;
 }
 
 /* HUD */
 #hud{
-  position:fixed;
-  top:14px;
-  left:14px;
-  color:white;
-  font-size:18px;
-  z-index:20;
+  position:fixed;top:14px;left:14px;color:white;
+  font-size:18px;z-index:20;
 }
 #lives{margin-left:6px}
+#level{font-size:14px;margin-top:4px}
+
+/* Hikâye */
+#storyLine{
+  position:fixed;top:60px;left:50%;
+  transform:translateX(-50%);
+  color:#ffd1e8;font-size:18px;
+  text-shadow:0 0 12px rgba(255,150,200,.8);
+  opacity:0;z-index:25;
+  transition:.5s;
+}
+#storyLine.show{opacity:1}
 
 /* Panel */
 #panel{
-  position:fixed;
-  bottom:80px;
-  left:50%;
+  position:fixed;bottom:80px;left:50%;
   transform:translateX(-50%);
-  width:60px;
-  height:14px;
-  border-radius:20px;
+  width:60px;height:14px;border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
   box-shadow:0 0 30px rgba(255,80,180,.9);
   z-index:15;
 }
 
-/* Harf kutuları */
+/* Kutular */
 #letterBoxes{
-  position:fixed;
-  bottom:20px;
-  left:10px;
-  display:flex;
-  gap:6px;
-  z-index:16;
+  position:fixed;bottom:20px;left:10px;
+  display:flex;gap:6px;z-index:16;
 }
 .box{
-  width:28px;
-  height:28px;
-  border-radius:6px;
+  width:28px;height:28px;border-radius:6px;
   background:rgba(255,255,255,.12);
-  backdrop-filter:blur(6px);
   border:1px solid rgba(255,255,255,.5);
-  box-shadow:inset 0 0 8px rgba(255,255,255,.4);
-  color:white;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-weight:bold;
-  font-size:14px;
+  color:white;display:flex;align-items:center;
+  justify-content:center;font-weight:bold;
 }
 .box.filled{background:rgba(255,255,255,.22)}
 
 /* Objeler */
 .item{position:absolute;top:-80px;pointer-events:none}
-
 .star{
   width:18px;height:18px;
   background:radial-gradient(circle,#ffe58a,#ffb300);
@@ -91,67 +75,45 @@ body::before{
   );
   box-shadow:0 0 12px gold;
 }
-
 .heart{
-  width:22px;height:22px;
-  background:#ff4d6d;
+  width:22px;height:22px;background:#ff4d6d;
   transform:rotate(-45deg);
   border-radius:50% 50% 0 0;
 }
 .heart::before,.heart::after{
-  content:"";
-  position:absolute;
-  width:22px;height:22px;
-  background:#ff4d6d;
-  border-radius:50%;
+  content:"";position:absolute;width:22px;height:22px;
+  background:#ff4d6d;border-radius:50%;
 }
 .heart::before{top:-11px}
 .heart::after{left:11px}
-
 .meteor{
-  width:16px;height:16px;
-  border-radius:50%;
+  width:16px;height:16px;border-radius:50%;
   background:radial-gradient(circle,#9e9e9e,#424242);
-  box-shadow:0 0 26px rgba(200,200,200,.6);
 }
-.meteor::after{
-  content:"";
-  position:absolute;
-  top:-50px;
-  left:50%;
-  transform:translateX(-50%);
-  width:6px;height:50px;
-  background:linear-gradient(to top,rgba(255,160,0,.8),transparent);
-}
-
 .letter{
-  font-size:20px;
-  font-weight:bold;
-  color:#ffd54f;
-  text-shadow:0 0 14px gold;
+  font-size:20px;font-weight:bold;
+  color:#ffd54f;text-shadow:0 0 14px gold;
 }
 
-/* Oyun Sonu */
-#over{
-  display:none;
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.75);
-  color:white;
-  font-size:32px;
-  z-index:30;
-  align-items:center;
-  justify-content:center;
-  flex-direction:column;
+/* Final Overlay */
+.final-overlay{
+  position:fixed;inset:0;
+  background:radial-gradient(circle,#14001f,#000);
+  display:flex;align-items:center;justify-content:center;
+  z-index:999;
 }
-#over button{
-  margin-top:15px;
-  padding:10px 22px;
-  border:none;
-  border-radius:14px;
-  background:#ff4d6d;
-  color:white;
-  font-size:18px;
+.final-content{text-align:center;color:white}
+.final-content button{
+  padding:12px 22px;margin:6px;
+  border:none;border-radius:20px;
+  background:#ff4d6d;color:white;
+}
+.heart-rain{
+  position:fixed;top:-30px;font-size:22px;
+  animation:fall 3s linear;
+}
+@keyframes fall{
+  to{transform:translateY(110vh);opacity:0}
 }
 </style>
 </head>
@@ -161,48 +123,41 @@ body::before{
 <div id="hud">
   Skor: <span id="score">0</span>
   <span id="lives">❤️❤️❤️</span>
+  <div id="level">Level: 1</div>
 </div>
 
+<div id="storyLine"></div>
 <div id="letterBoxes"></div>
 <div id="panel"></div>
 
-<div id="over">
-  <div id="endText"></div>
-  <button onclick="location.reload()">Tekrar Oyna</button>
+<div id="finalOverlay" class="final-overlay" style="display:none">
+  <div class="final-content">
+    <h1>⭐ YILDIZ ⭐</h1>
+    <p>Seni her yerde topladım…<br>Kalbimde 💖</p>
+    <button onclick="location.reload()">Tekrar Oyna</button>
+  </div>
 </div>
 
 <script>
-let score=0;
-let lives=3;
-let running=true;
-let speedFactor=1;
-
+let score=0,lives=3,running=true,speedFactor=1,level=1;
 const letters=["Y","I","L","D","I","Z"];
-const filled=[];
-const active=[];
-const items=[];
-
-const panel=document.getElementById("panel");
-const scoreEl=document.getElementById("score");
+const filled=[],active=[],items=[];
+const scoreEl=scoreSpan=score=document.getElementById("score");
 const livesEl=document.getElementById("lives");
-const over=document.getElementById("over");
-const endText=document.getElementById("endText");
-const boxes=document.getElementById("letterBoxes");
+const levelEl=document.getElementById("level");
+const panel=document.getElementById("panel");
 
-/* kutular */
 letters.forEach(l=>{
   const b=document.createElement("div");
-  b.className="box";
-  b.dataset.letter=l;
-  boxes.appendChild(b);
+  b.className="box";b.dataset.letter=l;
+  document.getElementById("letterBoxes").appendChild(b);
 });
 
-/* panel sürükleme */
 let dragging=false;
 panel.addEventListener("touchstart",()=>dragging=true);
 window.addEventListener("touchend",()=>dragging=false);
 window.addEventListener("touchmove",e=>{
-  if(!dragging) return;
+  if(!dragging)return;
   let x=e.touches[0].clientX-panel.offsetWidth/2;
   x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
   panel.style.left=x+"px";
@@ -213,114 +168,60 @@ function collide(a,b){
   return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
 }
 
-/* spawn */
-function spawn(type){
-  if(!running) return;
+function showStory(){
+  const texts=[
+    "Yıldız gibi parlıyorsun ✨",
+    "Kalbim seni seçti 💖",
+    "Her parça sana çıktı",
+    "Bu bir oyun değil…",
+    "Sonunda hep sen varsın ⭐"
+  ];
+  const el=document.getElementById("storyLine");
+  el.textContent=texts[(level-1)%texts.length];
+  el.classList.add("show");
+  setTimeout(()=>el.classList.remove("show"),2000);
+}
 
-  if(type==="letter"){
-    const pool=letters.filter(l=>{
-      const total=letters.filter(x=>x===l).length;
-      const done=filled.filter(x=>x===l).length;
-      return done<total && !active.includes(l);
-    });
-    if(!pool.length) return;
-
-    const l=pool[Math.floor(Math.random()*pool.length)];
-    active.push(l);
-
-    const el=document.createElement("div");
-    el.className="item letter";
-    el.textContent=l;
-    el.letter=l;
-    el.y=-40;
-    el.x=Math.random()*(innerWidth-40);
-    el.style.left=el.x+"px";
-    document.body.appendChild(el);
-    items.push({el,type});
-    return;
+function levelCheck(){
+  const nl=Math.floor(score/20)+1;
+  if(nl!==level){
+    level=nl;
+    levelEl.textContent="Level: "+level;
+    speedFactor+=0.2;
+    showStory();
   }
+}
 
+function spawn(type){
+  if(!running)return;
   const el=document.createElement("div");
   el.className="item "+type;
-  el.y=-60;
-  el.x=Math.random()*(innerWidth-40);
-  el.speed=(type==="meteor"?3:2)*speedFactor;
+  el.y=-60;el.x=Math.random()*(innerWidth-40);
   el.style.left=el.x+"px";
   document.body.appendChild(el);
   items.push({el,type});
 }
 
-/* loop */
 function loop(){
-  if(!running) return;
-  const pRect=panel.getBoundingClientRect();
-
+  if(!running)return;
+  const p=panel.getBoundingClientRect();
   for(let i=items.length-1;i>=0;i--){
     const o=items[i];
-    o.el.y+=(o.el.speed||2);
+    o.el.y+=(o.el.speed||2)*speedFactor;
     o.el.style.top=o.el.y+"px";
-    const r=o.el.getBoundingClientRect();
-
-    if(collide(r,pRect)){
-      if(o.type==="star") score+=10;
-      if(o.type==="heart" && lives<3) lives++;
-      if(o.type==="meteor") lives--;
-      if(o.type==="letter"){
-        filled.push(o.el.letter);
-        active.splice(active.indexOf(o.el.letter),1);
-
-        const box=[...document.querySelectorAll(`[data-letter="${o.el.letter}"]`)]
-          .find(b=>b.textContent==="");
-        if(box){box.textContent=o.el.letter;box.classList.add("filled")}
-
-        /* 🎉 KAZANMA KONTROLÜ */
-        if(filled.length===letters.length){
-          running=false;
-          panel.style.display="none";
-          items.forEach(i=>i.el.remove());
-          items.length=0;
-          endText.textContent="Kazandın ✨";
-          over.style.display="flex";
-          return;
-        }
-      }
-
+    if(collide(o.el.getBoundingClientRect(),p)){
+      if(o.type==="star")score+=10;
       scoreEl.textContent=score;
-      updateLives();
-      o.el.remove();
-      items.splice(i,1);
-
-      if(lives<=0){
-        running=false;
-        endText.textContent="Kaybettin";
-        over.style.display="flex";
-        return;
-      }
-    }
-
-    if(o.el.y>innerHeight+60){
-      if(o.type==="letter"){
-        active.splice(active.indexOf(o.el.letter),1);
-      }
-      o.el.remove();
-      items.splice(i,1);
+      levelCheck();
+      o.el.remove();items.splice(i,1);
     }
   }
   requestAnimationFrame(loop);
 }
 
-/* zamanlayıcılar */
 setInterval(()=>spawn("star"),900);
-setInterval(()=>spawn("meteor"),1200);
-setInterval(()=>spawn("heart"),5200);
-setInterval(()=>spawn("letter"),3200);
-
-/* hızlanma */
-setInterval(()=>{
-  speedFactor+=0.05;
-},8000);
-
 loop();
 </script>
+
 </body>
 </html>
