--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body::before{
   color:#ffd1e8;font-size:18px;
   text-shadow:0 0 12px rgba(255,150,200,.8);
   opacity:0;z-index:25;
-  transition:.5s;
+  transition:opacity .5s;
 }
 #storyLine.show{opacity:1}
 
@@ -75,24 +75,9 @@ body::before{
   );
   box-shadow:0 0 12px gold;
 }
-.heart{
-  width:22px;height:22px;background:#ff4d6d;
-  transform:rotate(-45deg);
-  border-radius:50% 50% 0 0;
-}
-.heart::before,.heart::after{
-  content:"";position:absolute;width:22px;height:22px;
-  background:#ff4d6d;border-radius:50%;
-}
-.heart::before{top:-11px}
-.heart::after{left:11px}
 .meteor{
   width:16px;height:16px;border-radius:50%;
   background:radial-gradient(circle,#9e9e9e,#424242);
-}
-.letter{
-  font-size:20px;font-weight:bold;
-  color:#ffd54f;text-shadow:0 0 14px gold;
 }
 
 /* Final */
@@ -131,35 +116,23 @@ body::before{
 </div>
 
 <script>
-let score=0,lives=3,level=1,running=true,speedFactor=1;
-const letters=["Y","I","L","D","I","Z"];
-const filled=[],active=[],items=[];
+document.addEventListener("DOMContentLoaded",()=>{
 
-const scoreEl=document.getElementById("score");
-const livesEl=document.getElementById("lives");
-const levelEl=document.getElementById("level");
-const panel=document.getElementById("panel");
-const finalOverlay=document.getElementById("finalOverlay");
+let score = 0;
+let lives = 3;
+let level = 1;
+let speedFactor = 1;
+let running = true;
 
-letters.forEach(l=>{
-  const b=document.createElement("div");
-  b.className="box";b.dataset.letter=l;
-  document.getElementById("letterBoxes").appendChild(b);
-});
+const scoreEl = document.getElementById("score");
+const livesEl = document.getElementById("lives");
+const levelEl = document.getElementById("level");
+const panel = document.getElementById("panel");
 
-let dragging=false;
-panel.addEventListener("touchstart",()=>dragging=true);
-window.addEventListener("touchend",()=>dragging=false);
-window.addEventListener("touchmove",e=>{
-  if(!dragging)return;
-  let x=e.touches[0].clientX-panel.offsetWidth/2;
-  x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
-  panel.style.left=x+"px";
-});
-
-function updateLives(){livesEl.textContent="❤️".repeat(lives)}
-function collide(a,b){
-  return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
+function updateHUD(){
+  scoreEl.textContent = score;
+  livesEl.textContent = "❤️".repeat(lives);
+  levelEl.textContent = "Level: " + level;
 }
 
 function showStory(){
@@ -177,50 +150,71 @@ function showStory(){
 }
 
 function checkLevel(){
-  const nl=Math.floor(score/20)+1;
-  if(nl!==level){
-    level=nl;
-    levelEl.textContent="Level: "+level;
-    speedFactor+=0.15;
+  const nl = Math.floor(score / 20) + 1;
+  if(nl !== level){
+    level = nl;
+    speedFactor += 0.15;
+    updateHUD();
     showStory();
   }
 }
 
-function spawn(type){
-  if(!running)return;
+let dragging=false;
+panel.addEventListener("touchstart",()=>dragging=true);
+window.addEventListener("touchend",()=>dragging=false);
+window.addEventListener("touchmove",e=>{
+  if(!dragging) return;
+  let x=e.touches[0].clientX-panel.offsetWidth/2;
+  x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
+  panel.style.left=x+"px";
+});
+
+const items=[];
+
+function spawnStar(){
+  if(!running) return;
   const el=document.createElement("div");
-  el.className="item "+type;
-  el.y=-60;el.x=Math.random()*(innerWidth-40);
-  el.speed=(type==="meteor"?3:2);
+  el.className="item star";
+  el.x=Math.random()*(innerWidth-40);
+  el.y=-40;
   el.style.left=el.x+"px";
   document.body.appendChild(el);
-  items.push({el,type});
+  items.push(el);
+}
+
+function collide(a,b){
+  return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
 }
 
 function loop(){
-  if(!running)return;
+  if(!running) return;
   const p=panel.getBoundingClientRect();
+
   for(let i=items.length-1;i>=0;i--){
-    const o=items[i];
-    o.el.y+=o.el.speed*speedFactor;
-    o.el.style.top=o.el.y+"px";
-    if(collide(o.el.getBoundingClientRect(),p)){
-      if(o.type==="star")score+=10;
-      if(o.type==="meteor")lives--;
-      scoreEl.textContent=score;
-      updateLives();
+    const el=items[i];
+    el.y+=2*speedFactor;
+    el.style.top=el.y+"px";
+
+    if(collide(el.getBoundingClientRect(),p)){
+      score+=10;
+      updateHUD();
       checkLevel();
-      o.el.remove();items.splice(i,1);
-      if(lives<=0){running=false;return;}
+      el.remove();
+      items.splice(i,1);
     }
-    if(o.el.y>innerHeight){o.el.remove();items.splice(i,1);}
+    if(el.y>innerHeight){
+      el.remove();
+      items.splice(i,1);
+    }
   }
   requestAnimationFrame(loop);
 }
 
-setInterval(()=>spawn("star"),900);
-setInterval(()=>spawn("meteor"),1500);
+setInterval(spawnStar,900);
+updateHUD();
 loop();
+
+});
 </script>
 
 </body>
