--- a/index.html
+++ b/index.html
@@ -3,94 +3,157 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>YILDIZ Oyunu</title>
+<title>YILDIZ</title>
 
 <style>
 html,body{
-  margin:0;padding:0;width:100%;height:100%;overflow:hidden;
+  margin:0;
+  padding:0;
+  width:100%;
+  height:100%;
+  overflow:hidden;
   font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
   background:radial-gradient(circle at top,#2b0b4f,#05010a);
   touch-action:none;
 }
 body::before{
-  content:"";position:fixed;inset:0;
+  content:"";
+  position:fixed;
+  inset:0;
   background-image:
     radial-gradient(1px 1px at 20% 30%,#fff,transparent),
     radial-gradient(1px 1px at 70% 60%,#fff,transparent),
     radial-gradient(1px 1px at 40% 80%,#fff,transparent);
-  opacity:.18;pointer-events:none;
+  opacity:.18;
+  pointer-events:none;
 }
 
 /* HUD */
 #hud{
-  position:fixed;top:14px;left:14px;
-  color:white;font-size:18px;z-index:20;
+  position:fixed;
+  top:14px;
+  left:14px;
+  color:white;
+  font-size:18px;
+  z-index:20;
 }
-#level{font-size:14px;margin-top:4px}
 #lives{margin-left:6px}
+#level{display:block;font-size:14px;opacity:.8}
 
 /* Hikâye */
 #storyLine{
-  position:fixed;top:60px;left:50%;
+  position:fixed;
+  top:60px;
+  left:50%;
   transform:translateX(-50%);
-  color:#ffd1e8;font-size:18px;
+  color:#ffd1e8;
+  font-size:18px;
   text-shadow:0 0 12px rgba(255,150,200,.8);
-  opacity:0;z-index:25;
-  transition:opacity .5s;
+  opacity:0;
+  z-index:25;
+  transition:.5s;
 }
 #storyLine.show{opacity:1}
 
 /* Panel */
 #panel{
-  position:fixed;bottom:80px;left:50%;
+  position:fixed;
+  bottom:80px;
+  left:50%;
   transform:translateX(-50%);
-  width:60px;height:14px;border-radius:20px;
+  width:60px;
+  height:14px;
+  border-radius:20px;
   background:linear-gradient(90deg,#ff6aa2,#ff2f7a);
   box-shadow:0 0 30px rgba(255,80,180,.9);
   z-index:15;
 }
 
-/* Kutular */
+/* Harf kutuları */
 #letterBoxes{
-  position:fixed;bottom:20px;left:10px;
-  display:flex;gap:6px;z-index:16;
+  position:fixed;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:8px;
+  z-index:16;
 }
 .box{
-  width:28px;height:28px;border-radius:6px;
+  width:30px;
+  height:30px;
+  border-radius:8px;
   background:rgba(255,255,255,.12);
   border:1px solid rgba(255,255,255,.5);
-  color:white;display:flex;align-items:center;
-  justify-content:center;font-weight:bold;
+  color:white;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:bold;
+  font-size:15px;
 }
-.box.filled{background:rgba(255,255,255,.22)}
+.box.filled{
+  background:rgba(255,255,255,.3);
+  box-shadow:0 0 12px rgba(255,200,220,.9);
+}
 
 /* Objeler */
 .item{position:absolute;top:-80px;pointer-events:none}
 .star{
   width:18px;height:18px;
   background:radial-gradient(circle,#ffe58a,#ffb300);
-  clip-path:polygon(
-    50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,
-    50% 70%,21% 91%,32% 57%,2% 35%,39% 35%
-  );
+  clip-path:polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%);
   box-shadow:0 0 12px gold;
 }
+.heart{
+  width:22px;height:22px;
+  background:#ff4d6d;
+  transform:rotate(-45deg);
+  border-radius:50% 50% 0 0;
+}
+.heart::before,.heart::after{
+  content:"";
+  position:absolute;
+  width:22px;height:22px;
+  background:#ff4d6d;
+  border-radius:50%;
+}
+.heart::before{top:-11px}
+.heart::after{left:11px}
 .meteor{
-  width:16px;height:16px;border-radius:50%;
+  width:16px;height:16px;
+  border-radius:50%;
   background:radial-gradient(circle,#9e9e9e,#424242);
 }
-
-/* Final */
-#finalOverlay{
-  position:fixed;inset:0;
-  background:radial-gradient(circle,#14001f,#000);
-  display:none;align-items:center;justify-content:center;
-  z-index:999;color:white;text-align:center;
+.letter{
+  font-size:22px;
+  font-weight:bold;
+  color:#ffd54f;
+  text-shadow:0 0 14px gold;
 }
-#finalOverlay button{
-  padding:12px 22px;margin-top:14px;
-  border:none;border-radius:20px;
-  background:#ff4d6d;color:white;
+
+/* Oyun sonu */
+#over{
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.8);
+  color:white;
+  z-index:30;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  text-align:center;
+}
+#over h1{font-size:32px;margin-bottom:10px}
+#over button{
+  margin-top:15px;
+  padding:10px 22px;
+  border:none;
+  border-radius:14px;
+  background:#ff4d6d;
+  color:white;
+  font-size:18px;
 }
 </style>
 </head>
@@ -100,122 +163,166 @@ body::before{
 <div id="hud">
   Skor: <span id="score">0</span>
   <span id="lives">❤️❤️❤️</span>
-  <div id="level">Level: 1</div>
+  <span id="level">Level: 1</span>
 </div>
 
 <div id="storyLine"></div>
 <div id="letterBoxes"></div>
 <div id="panel"></div>
 
-<div id="finalOverlay">
-  <div>
-    <h1>⭐ YILDIZ ⭐</h1>
-    <p>Seni her yerde topladım…<br>Kalbimde 💖</p>
-    <button onclick="location.reload()">Tekrar Oyna</button>
-  </div>
+<div id="over">
+  <h1 id="endText"></h1>
+  <button onclick="location.reload()">Tekrar Oyna</button>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded",()=>{
+/* ====== TEMEL ====== */
+let score=0,lives=3,level=1,running=true;
+let speedFactor=1,secret=false;
 
-let score = 0;
-let lives = 3;
-let level = 1;
-let speedFactor = 1;
-let running = true;
+const letters=["Y","I","L","D","I","Z"];
+const filled=[],active=[],items=[];
 
-const scoreEl = document.getElementById("score");
-const livesEl = document.getElementById("lives");
-const levelEl = document.getElementById("level");
-const panel = document.getElementById("panel");
+const panel=document.getElementById("panel");
+const scoreEl=document.getElementById("score");
+const livesEl=document.getElementById("lives");
+const levelEl=document.getElementById("level");
+const story=document.getElementById("storyLine");
+const boxes=document.getElementById("letterBoxes");
+const over=document.getElementById("over");
+const endText=document.getElementById("endText");
 
-function updateHUD(){
-  scoreEl.textContent = score;
-  livesEl.textContent = "❤️".repeat(lives);
-  levelEl.textContent = "Level: " + level;
-}
+/* Kutular */
+letters.forEach(l=>{
+  const b=document.createElement("div");
+  b.className="box";
+  b.dataset.letter=l;
+  boxes.appendChild(b);
+});
 
-function showStory(){
-  const texts=[
-    "Yıldız gibi parlıyorsun ✨",
-    "Kalbim seni seçti 💖",
-    "Her parça sana çıktı",
-    "Bu bir oyun değil…",
-    "Sonunda hep sen varsın ⭐"
-  ];
-  const el=document.getElementById("storyLine");
-  el.textContent=texts[(level-1)%texts.length];
-  el.classList.add("show");
-  setTimeout(()=>el.classList.remove("show"),2000);
-}
-
-function checkLevel(){
-  const nl = Math.floor(score / 20) + 1;
-  if(nl !== level){
-    level = nl;
-    speedFactor += 0.15;
-    updateHUD();
-    showStory();
-  }
-}
-
-let dragging=false;
-panel.addEventListener("touchstart",()=>dragging=true);
-window.addEventListener("touchend",()=>dragging=false);
+/* Panel kontrol */
+let drag=false;
+panel.addEventListener("touchstart",()=>drag=true);
+window.addEventListener("touchend",()=>drag=false);
 window.addEventListener("touchmove",e=>{
-  if(!dragging) return;
+  if(!drag) return;
   let x=e.touches[0].clientX-panel.offsetWidth/2;
   x=Math.max(0,Math.min(innerWidth-panel.offsetWidth,x));
   panel.style.left=x+"px";
 });
 
-const items=[];
+/* Yardımcılar */
+function updateLives(){livesEl.textContent="❤️".repeat(lives)}
+function collide(a,b){return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom)}
 
-function spawnStar(){
+/* Hikâye */
+const storyTexts=[
+  "Yıldız gibi parlıyorsun ✨",
+  "Kalbim seni seçti 💖",
+  "Her parça sana ait",
+  "Bu bir oyun değil…",
+  "Bu biziz ⭐"
+];
+function showStory(){
+  story.textContent=storyTexts[(level-1)%storyTexts.length];
+  story.classList.add("show");
+  setTimeout(()=>story.classList.remove("show"),2000);
+}
+
+/* Spawn */
+function spawn(type){
   if(!running) return;
+  if(type==="letter"){
+    const pool=letters.filter(l=>filled.filter(x=>x===l).length<letters.filter(x=>x===l).length&&!active.includes(l));
+    if(!pool.length) return;
+    const l=pool[Math.floor(Math.random()*pool.length)];
+    active.push(l);
+    const el=document.createElement("div");
+    el.className="item letter";
+    el.textContent=l;
+    el.letter=l;
+    el.y=-40;
+    el.x=Math.random()*(innerWidth-40);
+    el.style.left=el.x+"px";
+    document.body.appendChild(el);
+    items.push({el,type});
+    return;
+  }
   const el=document.createElement("div");
-  el.className="item star";
+  el.className="item "+type;
+  el.y=-60;
   el.x=Math.random()*(innerWidth-40);
-  el.y=-40;
+  el.speed=(type==="meteor"?3:2)*speedFactor;
   el.style.left=el.x+"px";
   document.body.appendChild(el);
-  items.push(el);
+  items.push({el,type});
 }
 
-function collide(a,b){
-  return !(a.right<b.left||a.left>b.right||a.bottom<b.top||a.top>b.bottom);
-}
-
+/* Loop */
 function loop(){
   if(!running) return;
-  const p=panel.getBoundingClientRect();
-
+  const pRect=panel.getBoundingClientRect();
   for(let i=items.length-1;i>=0;i--){
-    const el=items[i];
-    el.y+=2*speedFactor;
-    el.style.top=el.y+"px";
+    const o=items[i];
+    o.el.y+=(o.el.speed||2);
+    o.el.style.top=o.el.y+"px";
+    const r=o.el.getBoundingClientRect();
 
-    if(collide(el.getBoundingClientRect(),p)){
-      score+=10;
-      updateHUD();
-      checkLevel();
-      el.remove();
+    if(collide(r,pRect)){
+      if(o.type==="star") score+=10;
+      if(o.type==="heart" && lives<3) lives++;
+      if(o.type==="meteor") lives--;
+      if(o.type==="letter"){
+        filled.push(o.el.letter);
+        active.splice(active.indexOf(o.el.letter),1);
+        const box=[...boxes.children].find(b=>b.textContent==="");
+        if(box){box.textContent=o.el.letter;box.classList.add("filled")}
+        if(filled.length===letters.length){
+          running=false;
+          endText.textContent="YILDIZ ⭐\nKalbim hep sende";
+          over.style.display="flex";
+          return;
+        }
+      }
+      scoreEl.textContent=score;
+      updateLives();
+      o.el.remove();
       items.splice(i,1);
+      if(lives<=0){
+        running=false;
+        endText.textContent="Kaybettin";
+        over.style.display="flex";
+        return;
+      }
     }
-    if(el.y>innerHeight){
-      el.remove();
+    if(o.el.y>innerHeight+60){
+      if(o.type==="letter") active.splice(active.indexOf(o.el.letter),1);
+      o.el.remove();
       items.splice(i,1);
     }
   }
   requestAnimationFrame(loop);
 }
 
-setInterval(spawnStar,900);
-updateHUD();
+/* Level & gizli mod */
+setInterval(()=>{
+  const newLevel=Math.floor(score/100)+1;
+  if(newLevel!==level){
+    level=newLevel;
+    levelEl.textContent="Level: "+level;
+    speedFactor+=0.2;
+    showStory();
+    if(level===5) secret=true;
+  }
+},500);
+
+/* Zamanlayıcılar */
+setInterval(()=>spawn("star"),800);
+setInterval(()=>spawn("meteor"),1200);
+setInterval(()=>spawn("heart"),5000);
+setInterval(()=>spawn("letter"),3000);
+
 loop();
-
-});
 </script>
-
 </body>
 </html>
